<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="pluto_network___plugin_name">Network Calls</string>
    <string name="pluto_network___no_api_text">No API call detected.</string>
    <string name="pluto_network___placeholder_status_code">200</string>
    <string name="pluto_network___search_api">Search Network Calls</string>
    <string name="pluto_network___no_search_result">No search result found.</string>
    <string name="pluto_network___exit_network_call_details">exit network call details</string>
    <string name="pluto_network___share">Share</string>
    <string name="pluto_network___delete">Network</string>
    <string name="pluto_network___exit_network_call_details_search">exit network call details search</string>
    <string name="pluto_network___search_api_content">Search API content</string>
    <string name="pluto_network___exit_network_call_details_search_clear">Clear API search</string>
    <string name="pluto_network___tab_overview">Overview</string>
    <string name="pluto_network___tab_request">Request</string>
    <string name="pluto_network___tab_response">Response</string>
    <string name="pluto_network___tab_error">Error Response</string>
    <string name="pluto_network___na">N/A</string>
    <string name="pluto_network___tab_network">Network</string>
    <string name="pluto_network___network_proxy_settings_enabled_description">showing response from</string>
    <string name="pluto_network___headers_title">Headers</string>
    <string name="pluto_network___query_params_title">Query Params</string>
    <string name="pluto_network___body_title">Body</string>
    <string name="pluto_network___exception_title">Exception</string>
    <string name="pluto_network___content_request_headers">Request Headers</string>
    <string name="pluto_network___content_request_query_param">Request Query Params</string>
    <string name="pluto_network___content_request_body">Request Body</string>
    <string name="pluto_network___content_response_headers">Response Headers</string>
    <string name="pluto_network___content_response_body">Response Body</string>
    <string name="pluto_network___no_headers">~ No Headers</string>
    <string name="pluto_network___network_state_in_progress">In Progress</string>
    <string name="pluto_network___network_state_failed">Failed</string>
    <string name="pluto_network___url_label">URL</string>
    <string name="pluto_network___waiting_for_response">~ Waiting for response</string>
    <string name="pluto_network___method_label">Method</string>
    <string name="pluto_network___ssl_label">Is SSL</string>
    <string name="pluto_network___protocol_label">Protocol</string>
    <string name="pluto_network___request_time_label">Requested at</string>
    <string name="pluto_network___response_time_label">Response at</string>
    <string name="pluto_network___delay_label">Delay</string>
    <string name="pluto_network___settings_link_mocklets_title">Link Mocklets Account</string>
    <string name="pluto_network___link">Link</string>
    <string name="pluto_network___settings_link_mocklets_description">Connect you Mocklets account to manage your network proxy setting efficiently</string>
    <string name="pluto_network___all_settings">See All</string>
    <string name="pluto_network___network_proxy_settings">Network Proxy Settings</string>
    <string name="pluto_network___delete_all_apis">Delete All Calls</string>
    <string name="pluto_network___network_proxy_settings_request_label">Request URL</string>
    <string name="pluto_network___network_proxy_settings_proxy_label">Redirect call to</string>
    <string name="pluto_network___save_settings">Save Settings</string>
    <string name="pluto_network___choose_from_mocklets">Choose API from Mocklets</string>
    <string name="pluto_network___request_url_label">Enter the https request URL</string>
    <string name="pluto_network___enter_mock_manually">You can either enter the mock API url manually\nor</string>
    <string name="pluto_network___exit_network_proxy_list">Exit Network Proxy List</string>
    <string name="pluto_network___setup_api_proxy">Setup API Proxy for future calls</string>
    <string name="pluto_network___update_api_proxy">Update Settings</string>
    <string name="pluto_network___open_shared_pref_menu">open shared preferences menu</string>
    <string name="pluto_network___exit_network_proxy_settings">exit network proxy settings</string>
    <string name="pluto_network___exit_network_proxy_edit">exit network proxy edit</string>
    <string name="pluto_network___open_network_menu">open network menu</string>
    <string name="pluto_network___copy_curl_code">Share Request cURL</string>
    <string name="pluto_network___curl_copied">cURL code copied!</string>
    <string name="pluto_network___clear">Clear</string>
    <string name="pluto_network___back">Back</string>
    <string name="pluto_network___no_network_proxy">No Network Proxy found</string>
    <string name="pluto_network___create_new_proxy_settings">New</string>
    <string name="pluto_network___proxy_edit_note">Changes will be reflected in future API calls</string>
    <string name="pluto_network___https">https://</string>
    <string name="pluto_network___copied_from_mocklets">URL auto filled by Mocklets selection</string>
    <string name="pluto_network___search_network_proxy">Search proxy settings</string>
    <string name="pluto_network___processing_body">~ Laa…aarge response body,\nworking hard to process it…</string>
    <string name="pluto_network___mock_settings_open">Open Mock Settings</string>
    <string name="pluto_network___mock_settings_list">Mock Settings</string>
    <string name="pluto_network___search_mock_settings">Search Mock Settings</string>
    <string name="pluto_network___search_content">Search Content</string>
    <string name="pluto_network___no_mock_settings">No Mock settings available</string>
    <string name="pluto_network___mock_settings_note">Use CTA on Network call details to add Mock settings</string>
    <string name="pluto_network___mock_settings_edit">Create Mock Settings</string>
    <string name="pluto_network___mock_edit_note">Changes will be reflected in future API calls</string>
    <string name="pluto_network___share_in_parts">Share in parts</string>
    <string name="pluto_network___request_size_label">Request Size</string>
    <string name="pluto_network___response_size_label">Response Size</string>
    <string name="pluto_network___body_title_search_alert">Search is disabled due to large content size.</string>
    <string name="pluto_network___tap_for_details">tap for details</string>
    <string name="pluto_network___binary_body">~ Binary Data ~</string>
    <plurals name="pluto_network___query_params_value_text">
        <item quantity="one">1 param</item>
        <item quantity="other">%d params</item>
    </plurals>
    <plurals name="pluto_network___headers_value_text">
        <item quantity="one">1 items</item>
        <item quantity="other">%d items</item>
    </plurals>
</resources>