<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/pluto___dark"
        android:theme="@style/PlutoTheme.AppBarOverlay">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/close"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/pluto_network___exit_network_call_details"
                    android:paddingStart="@dimen/pluto___margin_medium"
                    android:paddingLeft="@dimen/pluto___margin_medium"
                    android:paddingTop="@dimen/pluto___margin_mini"
                    android:paddingEnd="@dimen/pluto___margin_small"
                    android:paddingRight="@dimen/pluto___margin_small"
                    android:src="@drawable/pluto_network___ic_arrow_back_white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:ellipsize="end"
                    android:focusable="true"
                    android:fontFamily="@font/muli"
                    android:maxLines="1"
                    android:paddingTop="@dimen/pluto___margin_medium"
                    android:paddingBottom="@dimen/pluto___margin_small"
                    android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
                    android:textColor="@color/pluto___white"
                    android:textSize="@dimen/pluto___text_small"
                    app:layout_constraintEnd_toStartOf="@+id/share"
                    app:layout_constraintHorizontal_bias="1"
                    app:layout_constraintStart_toEndOf="@+id/close"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="POST, /user/login/453368282/success/true/sdjkdsf" />

                <ImageView
                    android:id="@+id/share"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="@font/muli_bold"
                    android:gravity="center"
                    android:paddingStart="@dimen/pluto___margin_small"
                    android:paddingEnd="@dimen/pluto___margin_small"
                    android:src="@drawable/pluto_network___ic_share"
                    android:text="@string/pluto_network___share"
                    android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
                    android:textColor="@color/pluto___text_dark_80"
                    android:textSize="@dimen/pluto___text_small"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/divider"
                    app:layout_constraintHorizontal_bias="1"
                    app:layout_constraintStart_toEndOf="@+id/close"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="@dimen/pluto___dp_1"
                    android:layout_height="0dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginBottom="14dp"
                    android:background="#33ffffff"
                    android:elevation="@dimen/pluto___margin_mini"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/search"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/search"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:fontFamily="@font/muli_bold"
                    android:gravity="center"
                    android:paddingStart="@dimen/pluto___margin_small"
                    android:paddingLeft="@dimen/pluto___margin_small"
                    android:paddingEnd="@dimen/pluto___margin_medium"
                    android:paddingRight="@dimen/pluto___margin_medium"
                    android:src="@drawable/pluto_network___ic_search_white"
                    android:text="@string/pluto_network___delete"
                    android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
                    android:textColor="@color/pluto___text_dark_80"
                    android:textSize="@dimen/pluto___text_small"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/searchView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginHorizontal="@dimen/pluto___margin_xsmall"
                android:layout_marginVertical="@dimen/pluto___dp_1"
                android:elevation="@dimen/pluto___margin_medium"
                android:visibility="gone"
                app:cardCornerRadius="@dimen/pluto___margin_xsmall"
                android:background="@color/pluto___section_color"
                app:layout_constraintBottom_toBottomOf="@+id/toolbar"
                app:layout_constraintEnd_toEndOf="@+id/toolbar"
                app:layout_constraintStart_toStartOf="@+id/toolbar"
                app:layout_constraintTop_toTopOf="@+id/toolbar"
                tools:visibility="visible">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/closeSearch"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:contentDescription="@string/pluto_network___exit_network_call_details_search"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:paddingHorizontal="@dimen/pluto___margin_xsmall"
                        android:src="@drawable/pluto_network___ic_arrow_back"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/editSearch"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/pluto___margin_xsmall"
                        android:layout_marginLeft="@dimen/pluto___margin_xsmall"
                        android:background="@null"
                        android:fontFamily="@font/muli_semibold"
                        android:hint="@string/pluto_network___search_api_content"
                        android:inputType="text"
                        android:textColor="@color/pluto___text_dark"
                        android:textColorHint="@color/pluto___text_dark_40"
                        android:textSize="15sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/clearSearch"
                        app:layout_constraintStart_toEndOf="@+id/closeSearch"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/clearSearch"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:contentDescription="@string/pluto_network___exit_network_call_details_search_clear"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:paddingHorizontal="@dimen/pluto___margin_xsmall"
                        android:src="@drawable/pluto_network___ic_close_gray"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            style="@style/PlutoNetworkTabLayoutStyle"
            app:tabIndicatorColor="@color/pluto___white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>